Updated the hostUrl and fileLocation in container1

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=entry
 server.port=6000
-hostUrl=${HOST_URL:http://localhost:7000/fileService/welcome}
+hostUrl=${HOST_URL:http://container2-service:7000/fileService/welcome}
 #hostUrl=${HOST_URL:http://host.docker.internal:7000/fileService/welcome}
 #hostUrl=${HOST_URL:http://container2-service:7000/fileService/welcome}
-fileLocation=container2/
+fileLocation=/harshil_PV_dir/
