--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -10,6 +10,12 @@ steps:
     args: ['build', '-t', 'us-central1-docker.pkg.dev/assignment3-428215/k8srepository/container1', '.']
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 'us-central1-docker.pkg.dev/assignment3-428215/k8srepository/container1']
+  - name: "gcr.io/cloud-builders/gke-deploy"
+    args:
+      - run
+      - --filename=/home/harshilmakwana2023/container1
+      - --location=us-central1-c
+      - --cluster=cluster-assignment-3
 options:
   logging: CLOUD_LOGGING_ONLY
 
