Added the wildcard for yml files in cloudbuild.yaml deploy stage

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,10 +13,10 @@ steps:
   - name: "gcr.io/cloud-builders/gke-deploy"
     args:
       - run
-      - --filename=./deployment1.yml
-      - --filename=./service1.yml
-      - --filename=./persistantvolume.yml
-      - --filename=./persistantvolumeclaim.yml
+      - --filename=./*.yml
+#      - --filename=./service1.yml
+#      - --filename=./persistantvolume.yml
+#      - --filename=./persistantvolumeclaim.yml
       - --location=us-central1-c
       - --cluster=cluster-assignment-3
 options:
