--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -24,8 +24,9 @@ steps:
       - "apply"
       - "-f"
       - "./container2deployment/"
-      - --location=us-central1-c
-      - --cluster=cluster-assignment-3
+    env:
+      - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
+      - 'CLOUDSDK_CONTAINER_CLUSTER=cluster-assignment-3'
 options:
   logging: CLOUD_LOGGING_ONLY
 
