--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -13,8 +13,8 @@ steps:
   - name: "gcr.io/cloud-builders/kubectl"
     args:
       - "delete"
-      - "-f"
-      - "./container2deployment/"
+      - "--all"
+      - "deployment"
     env:
       - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
       - 'CLOUDSDK_CONTAINER_CLUSTER=cluster-assignment-3'
@@ -27,14 +27,14 @@ steps:
 #      - --filename=./persistantvolumeclaim.yml
       - --location=us-central1-c
       - --cluster=cluster-assignment-3
-  - name: "gcr.io/cloud-builders/kubectl"
-    args:
-      - "apply"
-      - "-f"
-      - "./container2deployment/"
-    env:
-      - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
-      - 'CLOUDSDK_CONTAINER_CLUSTER=cluster-assignment-3'
+#  - name: "gcr.io/cloud-builders/kubectl"
+#    args:
+#      - "apply"
+#      - "-f"
+#      - "./container2deployment/"
+#    env:
+#      - 'CLOUDSDK_COMPUTE_ZONE=us-central1-c'
+#      - 'CLOUDSDK_CONTAINER_CLUSTER=cluster-assignment-3'
 options:
   logging: CLOUD_LOGGING_ONLY
 
