--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -11,9 +11,9 @@ steps:
 #    entrypoint: mvn
 #    args: [ 'package','-Dmaven.test.skip=true' ]
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['build', '-t', 'us-central1-docker.pkg.dev/assignment3-428215/k8srepository/container1:${SHORT_SHA}', '.']
+    args: ['build', '-t', 'us-central1-docker.pkg.dev/assignment3-428215/k8srepository/container1', '.']
   - name: 'gcr.io/cloud-builders/docker'
-    args: ['push', 'us-central1-docker.pkg.dev/assignment3-428215/k8srepository/container1:${SHORT_SHA}']
+    args: ['push', 'us-central1-docker.pkg.dev/assignment3-428215/k8srepository/container1']
   - name: "gcr.io/cloud-builders/kubectl"
     args:
       - "delete"
