updated the step name for maven tasks in cloudbuild.yaml file

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -2,7 +2,7 @@ steps:
   - name: 'maven'
     entrypoint: 'mvn'
     args: ['clean']
-    id: test
+    id: clean
   - name: 'maven'
     entrypoint: 'mvn'
     args: [ 'install','-DskipTests' ]
